--- a/trunk/jsidplay2/src/applet/collection/pictures.properties
+++ b/trunk/jsidplay2/src/applet/collection/pictures.properties
@@ -269,7 +269,7 @@ Per\ Tufvesson\ (Zax)=Mahoney.jpg
 maktone=Maktone.jpg
 Petr\ Kratky\ (Manex)=Manex.jpg
 Mark\ Cooksey=Mark_Cooksey.jpg
-Mark\ Cooksey\ <?>Mark_Cooksey.jpg
+Mark\ Cooksey\ <?>=Mark_Cooksey.jpg
 Mark\ Tait=Mark_Tait.jpg
 Markus\ Müller\ (Superbrain)=Markus_Mueller.jpg
 Markus\ Müller\ (Hayes)=Markus_Mueller.jpg
