--- a/trunk/jsidplay2/src/libsidutils/sidid.cfg
+++ b/trunk/jsidplay2/src/libsidutils/sidid.cfg
@@ -707,9 +707,7 @@ Jeremy_Hall
 85 ?? A0 00 B1 ?? F0 ?? 0A AA BD ?? ?? 8D 00 D4 BD ?? ?? 8D 01 D4 AND 8D 04 D4 C8 D0 02 E6 ?? B1 ?? F0 ?? 0A AA BD ?? ?? 8D 07 D4 END
 
 Jeroen_Kimmel
-B1 FB C8 9D 05 D4 B1 FB C8 9D 06 D4 29 0F 0A 0A 0A 0A 9D END
-98 9D ?? ?? B9 ?? ?? 9D 01 D4 9D ?? ?? B9 ?? ?? 9D 00 D4 9D ?? ?? 60 A9 01 9D ?? ?? BD ?? ?? 85 FB BD ?? ?? 85 FC BD ?? ?? 0A A8 C8 B1 FB C9 ?? D0 0C A9 00 9D ?? ?? A0 01 B1 FB B8 50 0A C9 01 END
-B1 FB C8 9D 03 D4 9D ?? ?? 29 F0 9D ?? ?? B1 FB C8 9D ?? ?? B1 FB C8 9D 05 D4 B1 FB C8 9D 06 D4 END
+A8 ?? ?? ?? 85 ?? ?? ?? ?? 85 ?? A9 00 9D ?? D4 9D ?? D4 9D END
 
 Jeroen_Koops
 8D 18 D4 A9 00 8D 17 D4 4C ?? ?? 0A 0A 0A A2 ?? 86 ?? 18 69 ?? 85 ?? 90 02 E6 ?? A0 00 B1 END
@@ -1063,6 +1061,11 @@ Rabbi
 Rabbi/Playstar_v2.0
 85 ?? A9 ?? 85 ?? AD ?? ?? 0D ?? ?? 0D ?? ?? 8D 16 D4 AD ?? ?? 8D 17 D4 AD ?? ?? 0D ?? ?? 8D 18 D4 60 BC END
 
+Radarsoft
+8D 05 D4 8D 0C D4 8D 13 D4 A9 00 8D 04 D4 8D 0B D4 8D 12 D4 C8 B1 FB 8D 0D D4 8D 14 D4 8D 06 D4 END
+AD ?? ?? 29 01 F0 48 CE ?? ?? D0 43 EE ?? ?? AC ?? ?? B9 ?? ?? 8D ?? ?? D0 1B AD ?? ?? 29 01 D0 08 AD ?? ?? 29 02 8D ?? ?? A9 FF 8D ?? ?? A9 01 8D ?? ?? D0 CB AD ?? ?? 09 01 8D 04 D4 B9 END
+29 7F AA BD ?? ?? 99 00 D4 BD ?? ?? 99 01 D4 68 30 08 A9 01 99 ?? ?? 4C ?? ?? A9 00 99 ?? ?? B9 ?? ?? E0 00 F0 ?? 99 04 D4 END
+
 Randy_Glover
 4C ?? ?? C8 B1 ?? 9D 02 D4 C8 B1 ?? 9D 03 D4 4C END
 
@@ -1162,10 +1165,8 @@ Slaygon
 13 D4 AD ?? ?? 8D 14 D4 A9 00 20 END
 
 SoedeSoft
-99 33 03 88 D0 FA END
-99 ?? ?? 88 D0 FA A9 00 8D ?? ?? AC ?? ?? 88 8C END
-99 ?? ?? 88 D0 FA A9 00 85 END
-BD ?? ?? D0 1B 18 B9 ?? ?? 7D ?? ?? 99 ?? ?? 99 00 D4 B9 ?? ?? 69 00 99 ?? ?? 99 01 D4 4C ?? ?? 38 B9 ?? ?? FD ?? ?? 99 ?? ?? 99 00 D4 B9 ?? ?? E9 00 99 ?? ?? 99 01 D4 18 BD ?? ?? 6D ?? ?? DD END
+D0 03 BD ?? ?? 9D ?? ?? 60 END
+B9 ?? ?? 4A 4A 4A 4A 9D ?? ?? B9 ?? ?? 0A 0A 0A 0A 9D ?? ?? B9 END
 
 Soft_Tune_Composer
 4C ?? ?? A8 60 B9 ?? ?? 8D ?? ?? B9 ?? ?? 8D ?? ?? 20 ?? ?? AD ?? ?? 99 05 D4 AD ?? ?? 99 06 D4 AC ?? ?? B9 ?? ?? 29 F0 09 01 9D ?? ?? B9 END
@@ -1356,11 +1357,6 @@ US_Gold/Novaload
 
 Uzzy/Entropy
 A9 FF 9D ?? ?? A9 08 99 04 D4 A9 00 99 06 D4 9D ?? ?? 9D ?? ?? CA 10 E5 8D ?? ?? 68 09 80 8D ?? ?? 60 29 7F F0 FB 18 A9 ?? E9 ?? 8D ?? ?? 6E END
-
-Vanderaart/Radarsoft
-8D 05 D4 8D 0C D4 8D 13 D4 A9 00 8D 04 D4 8D 0B D4 8D 12 D4 C8 B1 FB 8D 0D D4 8D 14 D4 8D 06 D4 END
-AD ?? ?? 29 01 F0 48 CE ?? ?? D0 43 EE ?? ?? AC ?? ?? B9 ?? ?? 8D ?? ?? D0 1B AD ?? ?? 29 01 D0 08 AD ?? ?? 29 02 8D ?? ?? A9 FF 8D ?? ?? A9 01 8D ?? ?? D0 CB AD ?? ?? 09 01 8D 04 D4 B9 END
-29 7F AA BD ?? ?? 99 00 D4 BD ?? ?? 99 01 D4 68 30 08 A9 01 99 ?? ?? 4C ?? ?? A9 00 99 ?? ?? B9 ?? ?? E0 00 F0 ?? 99 04 D4 END
 
 Vibrants/Laxity
 CE ?? ?? 10 ?? CE ?? ?? CE ?? ?? CE ?? ?? AD ?? ?? 8D ?? ?? AND BD ?? ?? 8D ?? ?? BD ?? ?? 10 03 4C END
