--- a/trunk/jsidplay2/src/libsidutils/sidid.cfg
+++ b/trunk/jsidplay2/src/libsidutils/sidid.cfg
@@ -830,10 +830,8 @@ Martin_Galway
 90 02 E6 ?? A0 00 B1 ?? C9 C0 90 END
 B0 F3 A0 00 B1 ?? C9 C0 90 END
 A0 00 B1 ?? ?? ?? ?? 29 3F C9 3C 90 ?? F0 ?? C8 C9 3F F0 END
-A0 00 B1 ?? AA C9 ?? B0 END
-A9 03 18 65 12 85 12 90 02 E6 13 A0 00 B1 ?? 10 END
-68 8D ?? ?? 68 8D ?? ?? A0 ?? A2 ?? CA 20 ?? ?? 9D ?? ?? 88 CA 20 ?? ?? 9D ?? ?? 88 CA CA 10 END
-BD ?? ?? F0 17 BD ?? ?? 18 7D ?? ?? 9D ?? ?? BD ?? ?? 7D ?? ?? 9D ?? ?? DE ?? ?? 60 END
+A5 ?? 4A 90 04 C6 ?? F0 ?? 4C END
+A0 1C A2 03 20 ?? ?? 9D 15 D4 88 CA 10 F6 END
 
 Martin_Walker
 2C ?? ?? 30 01 60 2C ?? ?? 30 ?? CE END
@@ -1086,15 +1084,16 @@ RiffQuick
 AD ?? ?? F0 03 20 ?? ?? 20 ?? ?? AD ?? ?? 8D 16 D4 AD ?? ?? 8D 15 D4 A9 07 85 FD E6 FE AD END
 
 Rob_Hubbard
-CE ?? ?? 10 08 A9 ?? 8D ?? ?? 4C ?? ?? CE ?? ?? 10 06 AD ?? ?? 8D ?? ?? BD ?? ?? 8D ?? ?? A8 AD ?? ?? F0 ?? AD ?? ?? CD ?? ?? D0 ?? BD ?? ?? 85 ?? BD ?? ?? 85 END
+CE ?? ?? 10 08 A9 ?? 8D ?? ?? 4C ?? ?? CE ?? ?? 10 06 AD ?? ?? 8D END
 2C ?? ?? 70 ?? FE ?? ?? AD ?? ?? 10 ?? C8 B1 ?? 10 ?? 9D ?? ?? 4C END
-C8 B1 ?? 9D ?? ?? 0A A8 AND B9 ?? ?? 8D ?? ?? B9 ?? ?? AC ?? ?? 99 01 D4 9D ?? ?? AD ?? ?? 99 00 D4 9D ?? ?? 4C END
 A9 ?? 8D 18 D4 24 ?? 30 ?? 50 ?? A2 02 A9 00 BC ?? ?? 99 04 D4 95 ?? 95 ?? 95 ?? 95 ?? 99 06 D4 A9 ?? 95 C9 ?? 10 ?? 85 ?? 4C ?? ?? 50 11 A9 00 A2 02 BC ?? ?? 99 04 D4 CA 10 F7 A9 80 85 ?? 4C END
-99 01 D4 9D ?? ?? AD ?? ?? 99 00 D4 4C ?? ?? CE ?? ?? AC ?? ?? BD ?? ?? 8E ?? ?? 0A 0A 0A AA BD ?? ?? 8D ?? ?? BD ?? ?? 2D ?? ?? 99 04 D4 BD ?? ?? 99 02 D4 BD ?? ?? 99 03 D4 BD ?? ?? 99 05 D4 END
-99 01 D4 9D ?? ?? AD ?? ?? 99 00 D4 AND AC ?? ?? BD ?? ?? 0A 0A 0A AA BD ?? ?? 8D ?? ?? BD ?? ?? 2D ?? ?? 99 ?? D4 BD ?? ?? 99 ?? D4 BD ?? ?? 99 ?? D4 AD END
 29 1F C9 01 90 22 B4 ?? ?? 30 10 18 A5 ?? 65 ?? 85 ?? A5 ?? 65 ?? 85 ?? 4C ?? ?? AC ?? ?? A5 ?? 99 00 D4 A5 ?? 99 01 D4 END
-0A 0A 0A AA BD ?? ?? 8D ?? ?? AD ?? ?? 10 ?? BD ?? ?? 2D ?? ?? 99 04 D4 BD ?? ?? 99 ?? D4 BD ?? ?? 99 ?? D4 END
 FE ?? ?? BC ?? ?? B1 ?? C9 FF D0 ?? A9 00 9D ?? ?? FE ?? ?? 4C ?? ?? AC ?? ?? BD ?? ?? 29 ?? D0 END
+4C ?? ?? BD ?? ?? 0A A8 B9 ?? ?? 8D ?? ?? B9 ?? ?? AC ?? ?? 99 01 D4 AD ?? ?? 99 00 D4 END
+AC ?? ?? BD ?? ?? 29 20 D0 ?? BD ?? ?? D0 ?? BD ?? ?? 29 FE 99 04 D4 A9 00 99 05 D4 99 06 D4 END
+B9 ?? ?? 9D 01 D4 B9 ?? ?? 9D 00 D4 20 ?? ?? BC ?? ?? C8 98 9D 04 D4 END
+(Rob_Hubbard_Digi)
+4A 4A 4A 4A 4C ?? ?? 29 0F EE ?? ?? D0 03 EE ?? ?? 8D 18 D4 AD 0D DD END
 
 Roel_Bosch
 C8 B1 4E 29 0F 8D ?? ?? 20 ?? ?? 4C ?? ?? B1 4E 60 18 69 01 9D ?? ?? 60 E0 00 D0 17 CE ?? ?? 10 12 AD ?? ?? 8D ?? ?? CE ?? ?? CE ?? ?? CE END
@@ -1390,6 +1389,9 @@ BC ?? ?? B1 ?? C9 80 B0 0F C9 60 90 0B 29 1F 0A 0A 0A 9D ?? ?? FE ?? ?? BC ?? ??
 4C ?? ?? A9 01 95 A9 ?? ?? ?? 9D ?? ?? 4C ?? ?? BC ?? ?? B9 ?? ?? 29 0F 38 E9 01 0A A8 B9 ?? ?? 85 C0 B9 ?? ?? 85 C1 B9 ?? ?? 85 C2 B9 ?? ?? 85 C3 BC ?? ?? B1 C0 C9 81 D0 09 BC ?? ?? C8 B1 END
 A9 08 8D 04 D4 8D 0B D4 8D 12 D4 60 A9 01 D0 01 60 CE ?? ?? 10 05 A9 02 8D ?? ?? A2 02 FE ?? ?? AD ?? ?? F0 03 4C ?? ?? DE ?? ?? 30 03 4C ?? ?? BD ?? ?? 85 02 BD ?? ?? 85 03 BC ?? ?? B1 02 C9 END
 
+Volker_Struebing
+C9 FF D0 01 60 C9 FE D0 0E C8 B1 FB 9D end
+
 Wally_Beben/Ariston
 E9 00 9D ?? ?? 48 C9 08 B0 05 A9 00 9D ?? ?? ?? ?? ?? 68 99 03 D4 68 99 02 D4 CE ?? ?? 30 03 4C ?? ?? CE ?? ?? 10 06 AD ?? ?? 8D ?? ?? A9 FF 8D ?? ?? 60 A0 18 A9 00 99 00 D4 88 10 FA 60 BC END
 C9 C0 90 0F 29 1F 0A 0A 0A 9D ?? ?? B1 A7 C8 C9 FF F0 ?? C9 80 90 08 29 3F 9D ?? ?? B1 A7 C8 C9 END
@@ -1519,7 +1521,7 @@ BD ?? ?? 30 14 29 40 D0 0F A4 ?? A9 FF 99 ?? ?? A9 40 1D ?? ?? 9D ?? ?? 60 29 20
 ?1001
 60 0C 10 A0 15 D9 3E 10 F0 06 88 88 88 END
 
-?Datapaan
+?Dataapan
 AD ?? ?? ?? ?? ?? ?? ?? ?? F0 01 60 ?? ?? ?? F0 11 A9 00 ?? ?? ?? A8 B1 FB ?? ?? ?? E6 FB D0 02 END
 
 ?Tork/Pulsar
