--- a/trunk/jsidplay2/src/libsidutils/sidid.cfg
+++ b/trunk/jsidplay2/src/libsidutils/sidid.cfg
@@ -351,6 +351,8 @@ A0 00 B1 10 4A 4A 4A 4A 8D 18 D4 A2 END
 
 Ed_Bogas
 A9 00 8D ?? ?? 8D 04 D4 8D 0B D4 AD ?? ?? D0 03 8D 12 D4 60 A2 00 8E ?? ?? 8E ?? ?? A2 00 8E ?? ?? 8D ?? ?? 8C ?? ?? 98 29 F0 8D ?? ?? A9 08 8D 04 D4 8D 0B D4 8D 12 D4 AD ?? ?? 8D 18 D4 END
+Ed_Bogas_2
+95 ?? 94 ?? 4C ?? ?? 6A B0 18 6A B0 33 BD ?? ?? F0 0D DE ?? ?? BD ?? ?? 95 ?? BD end
 
 Electro_Sound
 EE ?? ?? AD ?? ?? CD FF 02 D0 0E 20 ?? ?? A9 END
@@ -524,7 +526,7 @@ GRG_tiny
 85 ?? 68 4A 4A 4A 4A A8 F0 07 END
 C8 C0 20 90 04 C0 C0 90 04 49 01 85 END
 GRG_tiny2
-85 03 B4 85 B1 02 C9 5F F0 18 C9 F0 90 06 29 0F END
+B4 85 B1 02 C9 5F F0 ?? C9 F0 90 06 END
 
 Griff/Chromance
 AE ?? ?? AC ?? ?? BD ?? ?? 29 0F 0A 0A 0A 0A 99 02 D4 BD ?? ?? 29 F0 4A 4A 4A 4A 99 03 D4 DE ?? ?? D0 13 BD ?? ?? 49 03 9D ?? ?? 18 6D ?? ?? A8 B9 END
@@ -575,6 +577,9 @@ Hermit
 0A 0A 0A 0A 85 02 B5 90 F0 19 C9 7E F0 END
 (Hermit/3SID)
 A0 03 BE ?? ?? B5 80 99 15 D4 B5 81 99 ?? ?? B5 82 99 ?? ?? 88 10 EB C8 BE D8 13 B5 40 99 00 D4 B5 43 99 ?? ?? B5 46 99 ?? ?? C8 C0 15 D0 E9 60 END
+
+Hermit/SidWizard_v1
+69 00 69 00 8D 16 D4 A9 00 8D 15 D4 68 85 FF END
 
 HCL/BoozeDesign
 A9 00 9D 05 D4 9D 06 D4 A9 ?? 9D ?? ?? A9 ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? BD ?? ?? 9D ?? ?? 4C ?? ?? BD ?? ?? 10 23 FE ?? ?? D0 1B BD ?? ?? 9D ?? ?? BD ?? ?? 9D ?? ?? BD ?? ?? 9D ?? ?? BD END
@@ -718,7 +723,7 @@ Jeroen_Koops
 F0 1F CE ?? ?? D0 1A A9 ?? 8D ?? ?? CE ?? ?? 08 AD ?? ?? 0D ?? ?? 8D 18 D4 28 D0 05 A9 00 8D ?? ?? A9 ?? 8D ?? ?? AE ?? ?? BD ?? ?? 8D ?? ?? BD ?? ?? 8D ?? ?? DE ?? ?? D0 ?? 20 END
 
 JFK_Digi
-4A 18 6D 0B 10 8D 0B 10 AD 05 10 C9 04 B0 0D AD END
+A0 00 B1 A4 29 F0 4A 4A 4A 4A 8D ?? ?? B1 A8 29 F0 4A 4A 4A 4A 8D ?? ?? E6 01 AD ?? ?? 18 6D end
 
 Jim_Baguley/SolarSoft
 8D 07 D4 A9 41 8D 0B D4 C8 D0 06 E6 END
@@ -813,8 +818,11 @@ Mark_Clements
 
 Mark_Cooksey
 BD ?? ?? D0 03 20 ?? ?? 60 BD ?? ?? 99 01 D4 BD ?? ?? 99 00 D4 BD ?? ?? 99 03 D4 BD ?? ?? 99 02 D4 BD ?? ?? 99 05 D4 BD ?? ?? 99 06 D4 60 CE END
+C8 B1 FB 9D ?? ?? C8 98 18 65 FB 9D ?? ?? A5 FC 69 00 9D END
+
+Mark_Cooksey/Neil_Bate
 4C ?? ?? B1 ?? C8 C9 00 F0 1D A2 0A 8E 05 D4 A2 00 8E 06 D4 A2 00 8E 04 D4 A2 41 8E 04 D4 8D 01 D4 B1 ?? 8D 00 D4 END
-B9 ?? ?? 9D 05 D4 B9 ?? ?? 9D 06 D4 B9 ?? ?? 9D 04 D4 AE ?? ?? BD ?? ?? 9D ?? ?? BD ?? ?? 9D ?? ?? BD ?? ?? 9D ?? ?? AC ?? ?? 30 ?? B9 END
+C8 C9 00 F0 1D A2 0A 8E END
 
 Mark_Tait
 E8 C8 C0 06 D0 F4 AD ?? ?? 85 ?? AD ?? ?? 85 ?? AD ?? ?? 0A 0A 18 6D ?? ?? 0A AA 20 ?? ?? A2 00 AD ?? ?? 0A 8D ?? ?? 0A 0A 0A 18 6D ?? ?? A8 B9 END
@@ -842,6 +850,9 @@ Martin_Galway_Digi
 
 Martin_Walker
 2C ?? ?? 30 01 60 2C ?? ?? 30 ?? CE END
+
+Martin_Wheeler
+A2 02 A9 00 9D ?? ?? 9D ?? ?? BD ?? ?? A8 BD ?? ?? 99 02 D4 BD ?? ?? 99 03 D4 END
 
 Master_Composer
 0A 2E ?? ?? CA D0 F9 18 69 ?? 8D ?? ?? AD ?? ?? 69 ?? 8D ?? ?? 4C ?? ?? C9 40 F0 26 C9 03 D0 04 A9 00 F0 1A C9 08 D0 04 A9 03 D0 12 C9 3B D0 04 A9 02 D0 0A C9 38 D0 04 A9 01 D0 02 A9 ?? 8D END
@@ -969,7 +980,7 @@ B1 ?? 48 29 0F 85 ?? 68 4A 4A 4A 4A 8D ?? ?? A5 ?? 29 40 4A 4A 09 ?? 85 ?? C8 B1
 99 03 D4 BD ?? ?? 29 ?? 99 04 D4 A9 00 99 05 D4 99 06 D4 BD ?? ?? 99 05 D4 BD ?? ?? 29 F0 F0 06 BD ?? ?? 4C ?? ?? BD ?? ?? 0A 0A 0A 0A 1D ?? ?? 99 06 D4 BD ?? ?? 99 04 D4 60 BD END
 
 Network
-48 0A 0A 0A 0A 99 02 D4 68 4A 4A 4A 4A 99 03 D4 BD END
+68 4A 4A 4A 4A 99 03 D4 BD ?? ?? 99 05 D4 BD ?? ?? 99 06 D4 BD ?? ?? 3D END
 
 Nick_Jones
 A9 00 A2 10 26 ?? 26 ?? 2A C5 ?? 90 02 E5 ?? CA D0 F2 26 ?? 26 ?? 60 B1 ?? 9D ?? ?? C8 B1 ?? 9D ?? ?? BD ?? ?? 29 FE 9D 04 D4 09 01 9D ?? ?? 9D 04 D4 BD ?? ?? D0 03 4C END
@@ -1227,7 +1238,7 @@ SoundMonitor
 (JamMaster)
 8D 0C CE AD 18 D4 60 AD 0C CE 29 F0 0D EF CD 8D END
 (Syndicate/BB)
-0D 4B CE 8D 68 CE 60 A0 17 A9 00 99 00 D4 99 50 END
+AA BD ?? ?? 8D 04 DD BD ?? ?? 8D 05 DD BD ?? ?? 8D ?? ?? A9 00 85 ?? BD ?? ?? 85 ?? BD ?? ?? 8D END
 (Digitronix)
 8D 0C CE 8D FE 9F 60 A0 17 A9 00 99 00 D4 99 F4 END
 (MusicMaster_2)
@@ -1236,6 +1247,10 @@ SoundMonitor
 8D 72 CE 60 A0 17 A9 00 99 00 D4 99 5A CE 99 73 AND BD 00 9C 20 60 CC BD 00 9D END
 (MusicMaster_TMM)
 8D 0C CE 8D FF ?? 60 A0 17 A9 00 99 00 D4 99 F4 END
+(Chris_Huelsbeck_Digi_V1)
+A0 ?? A5 ?? CD ?? ?? F0 ?? B1 ?? 8D ?? ?? 29 0F END
+(Chris_Huelsbeck_Digi_V2)
+A0 ?? A5 ?? C5 ?? F0 ?? B1 ?? 85 ?? 29 0F 4A 18 69 ?? 8D 18 D4 A5 ?? D0 END
 
 SoundWriter_2.0
 18 65 F8 4A A4 F7 D0 04 4A 18 69 13 8D 18 D4 CE END
@@ -1313,7 +1328,7 @@ TFMX/TimeComposer
 98 9D ?? ?? 4C ?? ?? C9 E7 F0 BA C9 E6 F0 C3 C9 E8 F0 C3 C9 E2 F0 C7 C9 E1 F0 CB 4C ?? ?? A9 00 END
 
 TFX
-0A 0A 0A 8D ?? ?? A8 B9 ?? ?? 8D ?? ?? B9 ?? ?? 8D ?? ?? A2 01 END
+9D ?? ?? 9D ?? ?? A9 00 9D 05 D4 9D 06 D4 A9 ?? 9D 04 D4 end
 
 TIC/Artworx
 85 40 E6 44 E6 44 A6 44 BD END
@@ -1369,6 +1384,9 @@ US_Gold/Novaload
 
 Uzzy/Entropy
 A9 FF 9D ?? ?? A9 08 99 04 D4 A9 00 99 06 D4 9D ?? ?? 9D ?? ?? CA 10 E5 8D ?? ?? 68 09 80 8D ?? ?? 60 29 7F F0 FB 18 A9 ?? E9 ?? 8D ?? ?? 6E END
+
+Van_Styer_Digi
+06 D4 8D 0D D4 8D 14 D4 60 B9 00 END
 
 Vibrants/Laxity
 CE ?? ?? 10 ?? CE ?? ?? CE ?? ?? CE ?? ?? AD ?? ?? 8D ?? ?? AND BD ?? ?? 8D ?? ?? BD ?? ?? 10 03 4C END
@@ -1450,6 +1468,9 @@ CA D0 FD 88 D0 DB E6 FD D0 02 E6 FE A5 FD C9 END
 Zyborg
 85 FB B9 ?? ?? 85 FC BD ?? ?? 0A A8 B1 FB C9 FF D0 0A C8 B1 FB 9D ?? ?? 0A END
 
+?Unknown_1
+C8 98 9D 04 D4 60 C0 80 D0 07 BD ?? ?? 9D 04 D4 60 END
+
 ?Unknown_2
 AC 02 89 B9 00 8A C9 C0 D0 1A CE 04 89 10 19 EE END
 
@@ -1480,10 +1501,10 @@ A2 17 A9 00 9D 00 D4 CA 10 FA A9 21 8D 05 D4 8D 0C D4 8D 13 D4 A9 84 8D 06 D4 8D
 ?Howard_Boles
 A9 01 99 8C 85 A9 55 99 8F 85 88 10 F3 A5 02 18 END
 
-?unknown_digi_1
+?Unknown_digi_1
 D0 38 AD 0D DD F0 FB B1 5B 4A 4A 4A 4A 8D 18 D4 END
 
-?unknown_digi_2
+?Unknown_digi_2
 8E 53 0F A0 00 B1 FB 4A 4A 4A 4A 8D 18 D4 END
 
 ?ArgusPress
@@ -1502,29 +1523,17 @@ F0 F8 BC ?? ?? BD ?? ?? ?? 06 BD ?? ?? 4C ?? ?? BD ?? ?? 4C ?? ?? BD ?? ?? F0 09
 ?Source
 E0 0E D0 02 A2 14 END
 
-Digi-Organizer
-4C E6 91 AD 82 90 0A A8 B9 01 92 29 7F 20 C7 91 A9 00 8D 85 90 8A 0A 2E 85 90 0A 2E 85 90 0A 2E 85 90 0A 2E 85 90 0A 2E 85 90 EA EA EA EA 8D END
-
-Crunched:Exomizer
-02 04 04 30 20 10 AD ?? ?? EE END
-
-Crunched:BetaDynamic
-4A 4A 4A 29 07 AA F0 0A 20 END
-
-Crunched:PUCrunch
-E8 88 D0 F4 A9 80 85 FB 4C END
-
 ?Paul_Hodgson
-60 A0 ?? B1 ?? 8D ?? ?? C8 B1 ?? 8D ?? D4 C8 B1 ?? 8D ?? D4 C8 B1 ?? 8D ?? D4 C8 B1 ?? 8D ?? ?? C8 B1 ?? 8D ?? ?? C8 B1 ?? 8D ?? ?? C8 B1 ?? 8D END
+60 A0 ?? B1 ?? 8D ?? ?? C8 B1 ?? 8D ?? D4 C8 B1 ?? 8D ?? D4 C8 B1 END
 
 ?US_Gold_90
 C9 B0 D0 1B A5 FF 29 0F 9D END
 
 ?Russel_Lieblich_2
-BD ?? ?? 30 14 29 40 D0 0F A4 ?? A9 FF 99 ?? ?? A9 40 1D ?? ?? 9D ?? ?? 60 29 20 F0 03 4C END
+BD ?? ?? 30 14 29 40 D0 0F A4 ?? A9 FF 99 END
 
 ?Jim_Simmons/Capcom
-99 00 D4 C8 CE ?? ?? D0 F4 F0 0C B9 ?? ?? 99 00 D4 C8 CE ?? ?? D0 F4 CA CA 10 D5 60 END
+99 00 D4 C8 CE ?? ?? D0 F4 CA CA 10 D5 60 END
 
 ?1001
 60 0C 10 A0 15 D9 3E 10 F0 06 88 88 88 END
@@ -1541,5 +1550,17 @@ C9 02 90 11 29 08 F0 38 AD DA 03 29 F4 8D DA 03 D0 2E 20 END
 ?Hoernell/Players
 E6 FB D0 02 E6 FC ?? A0 00 B1 FB C9 FF F0 28 END
 
-?Unknown_1
-C8 98 9D 04 D4 60 C0 80 D0 07 BD ?? ?? 9D 04 D4 60 END
+Digi-Organizer
+4C E6 91 AD 82 90 0A A8 B9 01 92 29 7F 20 C7 91 END
+
+Crunched:Exomizer
+02 04 04 30 20 10 AD ?? ?? EE END
+
+Crunched:BetaDynamic
+4A 4A 4A 29 07 AA F0 0A 20 END
+
+Crunched:PUCrunch
+E8 88 D0 F4 A9 80 85 FB 4C END
+
+?CBS
+4C ?? ?? 0E ?? ?? AD ?? ?? 0A A8 0A 0A 18 6D end
