--- a/trunk/jsidplay2/src/libsidutils/sidid.cfg
+++ b/trunk/jsidplay2/src/libsidutils/sidid.cfg
@@ -50,7 +50,7 @@ A2 00 BD ?? ?? F0 6D FE ?? ?? D0 68 FE ?? ?? D0 63 BD ?? ?? 85 FE BD ?? ?? 85 FF
 41 35 2C 30 31 2C 32 39 2C 46 45 2C 38 35 2C 30 31 2C 41 44 2C 30 30 2C 41 30 2C 44 30 2C 30 39 END
 
 Andrew_Rodger
-8D 18 D4 AND 8D 05 D4 8D 06 D4 8D 0C D4 8D 0D D4 8D 13 D4 8D 14 D4 4c END
+8D 18 D4 AND 8D 05 D4 8D 06 D4 8D 0C D4 8D 0D D4 8D 13 D4 8D 14 D4 4C END
 8D 18 D4 AND 8D 05 D4 8D 06 D4 8D 0C D4 8D 0D D4 8D 13 D4 8D 14 D4 60 END
 
 Android
@@ -349,10 +349,10 @@ BC ?? ?? F0 ?? DE ?? ?? BD ?? ?? D0 ?? B9 ?? ?? C9 90 D0 07 B9 ?? ?? 9D ?? ?? A8
 Ed/Wrath_Digi
 A0 00 B1 10 4A 4A 4A 4A 8D 18 D4 A2 END
 
-Ed_Bogas
+Ed_Bogas_V1
+95 ?? 94 ?? 4C ?? ?? 6A B0 18 6A B0 33 BD ?? ?? F0 0D DE ?? ?? BD ?? ?? 95 ?? BD END
+Ed_Bogas_V2
 A9 00 8D ?? ?? 8D 04 D4 8D 0B D4 AD ?? ?? D0 03 8D 12 D4 60 A2 00 8E ?? ?? 8E ?? ?? A2 00 8E ?? ?? 8D ?? ?? 8C ?? ?? 98 29 F0 8D ?? ?? A9 08 8D 04 D4 8D 0B D4 8D 12 D4 AD ?? ?? 8D 18 D4 END
-Ed_Bogas_2
-95 ?? 94 ?? 4C ?? ?? 6A B0 18 6A B0 33 BD ?? ?? F0 0D DE ?? ?? BD ?? ?? 95 ?? BD end
 
 Electro_Sound
 EE ?? ?? AD ?? ?? CD FF 02 D0 0E 20 ?? ?? A9 END
@@ -419,9 +419,9 @@ Flash_Inc_V4.0
 Frank_Hammer/Sharon
 4A 4A 4A 4A 28 8D 15 D4 AD ?? ?? 71 A9 8D ?? ?? 8D 16 D4 AE ?? ?? BD END
 
-Frank_Tout_v1
+Frank_Tout_V1
 F0 39 CE 01 93 AD 01 93 C9 00 D0 END
-Frank_Tout_v2
+Frank_Tout_V2
 B9 00 ?? 8D 01 D4 B9 00 ?? 8D 00 D4 B9 00 ?? 8D 08 D4 B9 00 ?? 8D 07 D4 B9 00 ?? 8D 0F D4 B9 END
 
 Fred_Gray
@@ -500,7 +500,7 @@ Golem
 
 GMC/Superiors
 E1 EE FD BD ?? ?? 9D ?? ?? A8 B9 ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? BD ?? ?? 9D ?? ?? BC ?? ?? 18 0A 0A 0A 0A 85 ?? AD ?? ?? 69 00 85 ?? A0 00 B1 END
-GMC_v2.0/Superiors
+GMC_V2.0/Superiors
 E1 EE FD BD ?? ?? 9D ?? ?? A8 B9 ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? BD ?? ?? 9D ?? ?? A8 29 F0 85 FC 98 29 0F 18 6D ?? ?? 85 FD A0 00 98 9D END
 
 GoatTracker_V1.x
@@ -578,7 +578,7 @@ Hermit
 (Hermit/3SID)
 A0 03 BE ?? ?? B5 80 99 15 D4 B5 81 99 ?? ?? B5 82 99 ?? ?? 88 10 EB C8 BE D8 13 B5 40 99 00 D4 B5 43 99 ?? ?? B5 46 99 ?? ?? C8 C0 15 D0 E9 60 END
 
-Hermit/SidWizard_v1
+Hermit/SidWizard_V1
 69 00 69 00 8D 16 D4 A9 00 8D 15 D4 68 85 FF END
 
 HCL/BoozeDesign
@@ -723,7 +723,7 @@ Jeroen_Koops
 F0 1F CE ?? ?? D0 1A A9 ?? 8D ?? ?? CE ?? ?? 08 AD ?? ?? 0D ?? ?? 8D 18 D4 28 D0 05 A9 00 8D ?? ?? A9 ?? 8D ?? ?? AE ?? ?? BD ?? ?? 8D ?? ?? BD ?? ?? 8D ?? ?? DE ?? ?? D0 ?? 20 END
 
 JFK_Digi
-A0 00 B1 A4 29 F0 4A 4A 4A 4A 8D ?? ?? B1 A8 29 F0 4A 4A 4A 4A 8D ?? ?? E6 01 AD ?? ?? 18 6D end
+A0 00 B1 A4 29 F0 4A 4A 4A 4A 8D ?? ?? B1 A8 29 F0 4A 4A 4A 4A 8D ?? ?? E6 01 AD ?? ?? 18 6D END
 
 Jim_Baguley/SolarSoft
 8D 07 D4 A9 41 8D 0B D4 C8 D0 06 E6 END
@@ -935,11 +935,11 @@ C9 5F B0 03 4C ?? ?? C9 FD D0 ?? C8 B1 ?? 18 7D ?? ?? 9D ?? ?? C8 B1 END
 MoN/FutureComposer
 FE ?? ?? BC ?? ?? B1 ?? C9 FF D0 ?? A9 00 9D ?? ?? BD ?? ?? F0 05 DE ?? ?? 10 03 END
 8D 17 D4 A0 06 88 88 88 88 88 88 B1 F9 END
-(FutureComposer_v1.0)
+(FutureComposer_V1.0)
 EE ?? ?? EE ?? ?? AD ?? ?? C9 32 D0 05 A9 01 8D ?? ?? 60 END
-(FC_v4_Packed)
+(FC_V4_Packed)
 EE 99 01 EE 9A 01 EE 9B 01 A9 END
-(FC_v3.x)
+(FC_V3.x)
 4C ?? ?? AD ?? ?? C9 60 90 0B 29 0F 9D ?? ?? FE ?? ?? 4C ?? ?? AD ?? ?? C9 40 90 0B 29 3F 9D END
 (MoN/Cyb2)
 4C ?? ?? AD ?? ?? C9 60 90 0B 29 0F 9D ?? ?? FE ?? ?? 4C ?? ?? 29 3F 9D ?? ?? FE ?? ?? 4C END
@@ -1077,7 +1077,7 @@ Rabbi
 9D 05 D4 9D 06 D4 9D ?? ?? A0 ?? C8 B1 FE 10 37 18 C9 C0 B0 23 29 3F 9D END
 9D ?? ?? A0 ?? C8 B1 FE 10 36 0A 0A B0 23 4A 4A 9D ?? ?? C8 B1 FE 9D END
 
-Rabbi/Playstar_v2.0
+Rabbi/Playstar_V2.0
 85 ?? A9 ?? 85 ?? AD ?? ?? 0D ?? ?? 0D ?? ?? 8D 16 D4 AD ?? ?? 8D 17 D4 AD ?? ?? 0D ?? ?? 8D 18 D4 60 BC END
 
 Radarsoft
@@ -1153,7 +1153,7 @@ Ryo_Kawasaki
 SadoTracker
 BC ?? ?? B1 ?? 30 ?? C8 C9 60 B0 ?? C9 50 B0 ?? 4C ?? ?? E9 50 END
 
-Samar/Raver_v1.0
+Samar/Raver_V1.0
 68 85 FC 68 85 FB 60 A5 FB 48 A5 FC 48 A2 00 20 ?? ?? E8 20 ?? ?? E8 END
 
 Sanyo_digi
@@ -1328,7 +1328,7 @@ TFMX/TimeComposer
 98 9D ?? ?? 4C ?? ?? C9 E7 F0 BA C9 E6 F0 C3 C9 E8 F0 C3 C9 E2 F0 C7 C9 E1 F0 CB 4C ?? ?? A9 00 END
 
 TFX
-9D ?? ?? 9D ?? ?? A9 00 9D 05 D4 9D 06 D4 A9 ?? 9D 04 D4 end
+9D ?? ?? 9D ?? ?? A9 00 9D 05 D4 9D 06 D4 A9 ?? 9D 04 D4 END
 
 TIC/Artworx
 85 40 E6 44 E6 44 A6 44 BD END
@@ -1563,4 +1563,4 @@ Crunched:PUCrunch
 E8 88 D0 F4 A9 80 85 FB 4C END
 
 ?CBS
-4C ?? ?? 0E ?? ?? AD ?? ?? 0A A8 0A 0A 18 6D end
+4C ?? ?? 0E ?? ?? AD ?? ?? 0A A8 0A 0A 18 6D END
