--- a/trunk/jsidplay2/src/libsidutils/sidid.cfg
+++ b/trunk/jsidplay2/src/libsidutils/sidid.cfg
@@ -350,7 +350,7 @@ Ed/Wrath_Digi
 A0 00 B1 10 4A 4A 4A 4A 8D 18 D4 A2 END
 
 Ed_Bogas_V1
-95 ?? 94 ?? 4C ?? ?? 6A B0 18 6A B0 33 BD ?? ?? F0 0D DE ?? ?? BD ?? ?? 95 ?? BD END
+B5 ?? 9D ?? ?? B5 ?? 9D ?? ?? 4C ?? ?? 0A 0A 0A 0A 69 01 END
 Ed_Bogas_V2
 A9 00 8D ?? ?? 8D 04 D4 8D 0B D4 AD ?? ?? D0 03 8D 12 D4 60 A2 00 8E ?? ?? 8E ?? ?? A2 00 8E ?? ?? 8D ?? ?? 8C ?? ?? 98 29 F0 8D ?? ?? A9 08 8D 04 D4 8D 0B D4 8D 12 D4 AD ?? ?? 8D 18 D4 END
 
@@ -490,6 +490,12 @@ Georg_Brandt
 85 ?? A2 ?? A9 ?? 9D 00 D4 A9 FF 9D ?? ?? CA 10 F3 AD ?? ?? 8D ?? ?? 8D ?? ?? A9 ?? 8D 18 D4 END
 A2 00 8E ?? ?? AD ?? ?? 8D ?? ?? AD ?? ?? C9 FF F0 11 AD ?? ?? 29 F0 0D ?? ?? 8D 18 D4 AD ?? ?? 8D 16 D4 AD ?? ?? 8D 17 D4 60 A2 02 20 ?? ?? CA 10 FA EE ?? ?? 4C ?? ?? DE ?? ?? F0 0E DE END
 C8 B1 ?? 9D ?? ?? BD ?? ?? 09 01 9D 04 D4 88 END
+
+Ghost/SampleMon
+98 4A 4A 4A 4A 8D 18 D4 60 AD END
+
+Gilles_Soulet
+C9 03 D0 21 BD ?? ?? DD ?? ?? F0 08 08 68 5D end
 
 Glover
 D0 10 BD ?? ?? F0 08 A9 00 9D 05 D4 9D 06 D4 4C ?? ?? BD ?? ?? F0 0A A9 0F 9D 05 D4 A9 00 9D 06 D4 4C ?? ?? C9 FE D0 03 4C ?? ?? C9 FD D0 0E END
@@ -1025,8 +1031,9 @@ Oliver_Klaewer
 D0 05 A9 01 8D ?? ?? CE ?? ?? D0 ?? AD ?? ?? 8D ?? ?? A0 15 8C ?? ?? A2 06 8E ?? ?? A2 03 8E ?? ?? 38 AD ?? ?? E9 07 8D ?? ?? CE ?? ?? CE ?? ?? CE ?? ?? 30 ?? AE ?? ?? DE ?? ?? D0 E4 AD END
 AA 18 B5 AA 69 02 95 AA 85 71 B5 AB 69 00 95 AB 85 72 A0 00 B1 71 95 B7 C8 B1 71 95 B8 B5 B7 85 END
 
-Ozzy_Oldschool
+Ozzy_Oldschool_V1
 4C ?? ?? BD ?? ?? DD ?? ?? D0 05 A9 FE 9D ?? ?? BD ?? ?? F0 0A BD ?? ?? C9 01 F0 28 4C ?? ?? BD ?? ?? DD ?? ?? F0 08 90 03 4C ?? ?? 4C ?? ?? A9 00 9D 05 D4 9D 06 D4 BD ?? ?? 29 FE 9D 04 D4 A9 END
+Ozzy_Oldschool_V2
 8D ?? ?? 60 A9 1C 8D ?? ?? 60 A2 00 8E ?? ?? A0 0F B1 FB 8D 18 D4 C8 B1 FB 8D 17 D4 C8 B1 FB F0 05 8D 16 D4 D0 55 BC ?? ?? B1 FB 8D ?? ?? 8D 16 D4 C8 B1 FB 8D ?? ?? C8 B1 FB 8D ?? ?? A9 00 8D END
 
 Paradroid/Lameplayer
@@ -1136,9 +1143,6 @@ C9 FF F0 ?? 0A 8D ?? ?? 0A 6D ?? ?? AA A0 00 END
 
 RoMuzak_V7.x
 C9 FF F0 ?? 48 29 07 0A 8D ?? ?? 0A 6D ?? ?? AA A0 END
-
-Rule3_Digi_1
-98 4A 4A 4A 4A 8D 18 D4 60 AD END
 
 Rule3_Digi_2
 86 01 29 F0 4A 4A 4A 4A ?? ?? 8D 18 D4 END
@@ -1550,6 +1554,12 @@ C9 02 90 11 29 08 F0 38 AD DA 03 29 F4 8D DA 03 D0 2E 20 END
 ?Hoernell/Players
 E6 FB D0 02 E6 FC ?? A0 00 B1 FB C9 FF F0 28 END
 
+?CBS
+4C ?? ?? 0E ?? ?? AD ?? ?? 0A A8 0A 0A 18 6D END
+
+?Lieblich&Grigg
+99 06 D4 60 E0 03 10 ?? BD ?? ?? A8 BD ?? ?? 99 04 D4 END
+
 Digi-Organizer
 4C E6 91 AD 82 90 0A A8 B9 01 92 29 7F 20 C7 91 END
 
@@ -1561,6 +1571,3 @@ Crunched:BetaDynamic
 
 Crunched:PUCrunch
 E8 88 D0 F4 A9 80 85 FB 4C END
-
-?CBS
-4C ?? ?? 0E ?? ?? AD ?? ?? 0A A8 0A 0A 18 6D END
