New SID ID configuration from 16 September 2012

--- a/jsidplay2/src/libsidutils/sidid.cfg
+++ b/jsidplay2/src/libsidutils/sidid.cfg
@@ -478,7 +478,7 @@ C9 80 29 20 F0 ?? 90 02 A9 01 AND 99 06 D4 A9 0F 99 05 D4 A9 FE 9D ?? ?? BD ?? ?
 D0 03 BD ?? ?? AA 0A 0A 0A 0A 8D ?? ?? 8A 29 F0 8D ?? ?? B9 ?? ?? 8D ?? ?? B9 ?? ?? D0 06 AD END
 
 Geir_Tjelta_digi_1
-8D 18 D4 4C ?? ?? C9 B0 90 0B E9 B1 0A 0A 0A 8D END
+8D 18 D4 4C ?? ?? 24 ?? 30 ?? 4A 4A 4A 4A 4C END
 
 Geir_Tjelta_digi_2
 9D 00 D4 CA 10 FA A9 81 8D 0D DD AD 0D DD 60 AD ?? ?? CE ?? ?? 10 0B 8D ?? ?? D0 END
@@ -495,7 +495,7 @@ Ghost/SampleMon
 98 4A 4A 4A 4A 8D 18 D4 60 AD END
 
 Gilles_Soulet
-C9 03 D0 21 BD ?? ?? DD ?? ?? F0 08 08 68 5D end
+C9 03 D0 21 BD ?? ?? DD ?? ?? F0 08 08 68 5D END
 
 Glover
 D0 10 BD ?? ?? F0 08 A9 00 9D 05 D4 9D 06 D4 4C ?? ?? BD ?? ?? F0 0A A9 0F 9D 05 D4 A9 00 9D 06 D4 4C ?? ?? C9 FE D0 03 4C ?? ?? C9 FD D0 0E END
@@ -585,7 +585,7 @@ Hermit
 A0 03 BE ?? ?? B5 80 99 15 D4 B5 81 99 ?? ?? B5 82 99 ?? ?? 88 10 EB C8 BE D8 13 B5 40 99 00 D4 B5 43 99 ?? ?? B5 46 99 ?? ?? C8 C0 15 D0 E9 60 END
 
 Hermit/SidWizard_V1
-69 00 69 00 8D 16 D4 A9 00 8D 15 D4 68 85 FF END
+F0 04 C0 60 90 03 4C ?? ?? BC END
 
 HCL/BoozeDesign
 A9 00 9D 05 D4 9D 06 D4 A9 ?? 9D ?? ?? A9 ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? BD ?? ?? 9D ?? ?? 4C ?? ?? BD ?? ?? 10 23 FE ?? ?? D0 1B BD ?? ?? 9D ?? ?? BD ?? ?? 9D ?? ?? BD ?? ?? 9D ?? ?? BD END
@@ -763,8 +763,10 @@ Keith_Wood
 KingFisher_Digi
 48 AD 0D DD 98 48 A0 00 B1 27 4A 4A 4A 4A 85 END
 
-Kosa_Protracker
+Kosa_Protracker_V1
 60 0A 0A 0A A8 A2 00 B9 ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? C8 C8 E8 E0 03 D0 ED A2 17 A9 00 9D 00 D4 CA 10 FA AA 9D ?? ?? E8 E0 ?? D0 F8 A9 ?? 8D 18 D4 B9 ?? ?? 8D ?? ?? 8D ?? ?? A2 02 B9 END
+Kosa_Protracker_V2
+C9 A0 90 0C 0A 0A 0A 9D END
 
 Kris_Hatlelid
 BD ?? ?? AA B1 ?? 9D 02 D4 C8 B1 ?? 9D 03 D4 A0 0F B1 ?? 9D 05 D4 C8 B1 ?? 9D 06 D4 END
@@ -1043,10 +1045,10 @@ Paradroid/HubbardEd
 B1 FC 10 1B C9 FF F0 12 C9 FE F0 0A END
 
 Patrick_Payne
-AD 04 D4 29 FE 8D 04 D4 AD 0B D4 29 FE 8D 0B D4 AD 12 D4 29 FE 8D 12 D4 60 CE ?? ?? F0 01 60 AC ?? ?? B9 ?? ?? 8D ?? ?? EE ?? ?? B9 END
+29 FE 8D 04 D4 4C ?? ?? A8 B9 ?? ?? 8D 00 D4 B9 ?? ?? 8D 01 D4 AE ?? ?? BD ?? ?? 29 FE 8D 04 D4 09 01 8D 04 D4 END
 
 Paul_Butler
-B9 ?? ?? A8 BD ?? ?? 29 FE 99 04 D4 A9 00 99 01 D4 ?? ?? ?? 20 ?? ?? ?? ?? ?? ?? ?? ?? ?? 9D ?? ?? C8 B1 ?? 9D ?? ?? C8 B1 ?? 9D ?? ?? C8 B1 ?? 9D ?? ?? C8 B1 ?? 9D ?? ?? C8 B1 ?? 29 F0 85 END
+A8 BD ?? ?? 99 00 D4 E8 C8 C6 ?? 10 END
 
 Paul_Norman/Cosmi
 C8 D0 02 E6 ?? B1 ?? AND 8D 00 D4 AND C8 D0 02 E6 ?? B1 AND 8D 08 D4 END
@@ -1191,6 +1193,9 @@ Slaygon
 SoedeSoft
 D0 03 BD ?? ?? 9D ?? ?? 60 END
 B9 ?? ?? 4A 4A 4A 4A 9D ?? ?? B9 ?? ?? 0A 0A 0A 0A 9D ?? ?? B9 END
+
+SoftwareAutomaticMouth
+69 88 4A 4A 4A 4A 8D 18 D4 C6 END
 
 Soft_Tune_Composer
 4C ?? ?? A8 60 B9 ?? ?? 8D ?? ?? B9 ?? ?? 8D ?? ?? 20 ?? ?? AD ?? ?? 99 05 D4 AD ?? ?? 99 06 D4 AC ?? ?? B9 ?? ?? 29 F0 09 01 9D ?? ?? B9 END
