--- a/jsidplay2/src/libsidutils/sidid.cfg
+++ b/jsidplay2/src/libsidutils/sidid.cfg
@@ -19,12 +19,10 @@ D0 ED C9 E0 B0 10 29 1F 7D END
 AD ?? ?? 4A 6A 6A 6A 05 ?? 8D ?? D4 AD ?? ?? 8D ?? D4 ?? ?? ?? 0D ?? ?? 8D 18 D4 END
 B4 ?? B1 ?? C9 FF F0 08 F6 ?? BC ?? ?? 99 04 D4 B4 ?? B1 ?? C9 ?? F0 ?? F6 END
 A9 00 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? E8 E0 03 D0 D1 8D ?? ?? 8D ?? ?? 8D ?? ?? 8D ?? ?? 8D 04 D4 8D 0B D4 8D 12 D4 8D END
-BD ?? ?? BC ?? ?? FE ?? ?? D0 03 DE ?? ?? 99 04 D4 BD ?? ?? 99 03 D4 BD ?? ?? 99 02 D4 BD ?? ?? 99 01 D4 BD ?? ?? 99 00 D4 CA ?? ?? 4C ?? ?? 60 END
+BC ?? ?? A9 ?? 99 04 D4 A9 ?? 99 01 D4 FE END
 86 FC 8E 17 D4 8E 16 D4 C8 C8 B9 ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? A9 ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? A9 01 9D ?? ?? 9D ?? ?? 9D END
 99 05 D4 68 99 06 D4 BD ?? ?? 29 40 F0 05 A9 00 99 04 D4 BD ?? ?? 4A 90 49 BC ?? ?? B9 ?? ?? 29 0F D0 08 8D 17 D4 8D ?? ?? F0 37 A0 00 D0 33 8D END
-BC ?? ?? 99 01 D4 68 99 00 D4 BD ?? ?? 99 02 D4 BD ?? ?? 99 03 D4 AD ?? ?? 18 6D ?? ?? 8D 18 D4 BD ?? ?? D0 12 BD ?? ?? C9 02 D0 0B BD ?? ?? 29 END
-75 ?? 85 ?? B5 ?? 29 ?? 4A 4A 4A 4A A8 46 ?? 66 ?? 88 10 F9 A5 ?? 38 F5 ?? 30 14 END
-29 70 4A 4A 4A 4A A8 46 ?? 66 ?? 88 10 END
+29 ?? 4A 4A 4A 4A A8 46 ?? 66 ?? 88 10 END
 
 8bitDigi/THCM
 60 CE ?? ?? A2 18 A9 00 9D 00 D4 CA 10 FA A9 7F 8D 0D DD A9 08 8D 0E DD 60 A9 00 10 01 60 A4 END
@@ -62,8 +60,7 @@ Anthony_Crowther
 A0 00 8C 12 D4 B1 ?? 8D 0F D4 C8 B1 ?? 8D 0E D4 END
 
 Anthony_Lees
-A8 A9 00 C0 00 F0 06 18 69 07 88 D0 FA AA 68 9D 04 D4 AD ?? ?? 4A 4A 4A 4A 4A 4A 85 ?? AD END
-4C ?? ?? A1 F9 8D ?? ?? F6 F9 D0 02 F6 FA AD ?? ?? C9 FF D0 0B BD ?? ?? 29 FE 99 04 D4 4C END
+BD ?? ?? 18 ?? ?? ?? 99 00 D4 A9 00 7D ?? ?? 99 01 D4 END
 
 Anvil
 99 00 D4 BD ?? ?? 99 01 D4 BD ?? ?? 99 03 D4 BD ?? ?? 99 02 D4 BD AND 06 D4 BD ?? ?? 3D ?? ?? 99 04 D4 FE ?? ?? DE ?? ?? CA 30 03 4C END
@@ -133,12 +130,16 @@ B2 35 34 32 37 32 END
 31 33 AC 34 30 39 36 AA 34 AC 32 35 36 END
 
 Ben_Daglish
-AD ?? ?? 8D 00 D4 AD ?? ?? 8D 01 D4 AD ?? ?? 8D 02 D4 AD ?? ?? 8D 03 D4 AD ?? ?? 8D 04 D4 AD ?? ?? 8D 05 D4 AD ?? ?? 8D 06 D4 AND 2A AD ?? ?? 8D 07 D4 AD ?? ?? 8D 08 D4 AD ?? ?? 8D 09 D4 END
-9D ?? ?? B9 ?? ?? 9D ?? ?? 4C ?? ?? B9 ?? ?? F0 11 C9 01 F0 E8 B9 ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? 60 4C ?? ?? B9 ?? ?? D0 06 B9 ?? ?? 99 ?? ?? B9 ?? ?? C9 01 F0 0A C9 02 F0 18 20 ?? ?? 4C END
-A2 00 BD ?? ?? F0 08 A9 00 9D 04 D4 9D ?? ?? 8A 18 69 07 AA E0 ?? 90 EA A2 ?? BD ?? ?? 9D 99 D3 E8 10 F7 60 END
-4C ?? ?? 85 ?? 86 ?? 4C ?? ?? 60 AD ?? ?? F0 FA 20 ?? ?? A2 18 BD ?? ?? 9D 00 D4 CA 10 F7 60 EE ?? ?? A2 00 BC ?? ?? 84 ?? 86 ?? B9 ?? ?? 18 7D ?? ?? 99 ?? ?? FE ?? ?? BD ?? ?? D9 ?? ?? 90  END
-A5 ?? 8D 00 D4 A5 ?? 8D 01 D4 A5 ?? 8D 02 D4 A5 ?? 8D 03 D4 A5 ?? 8D 04 D4 A5 ?? 8D 05 D4 A5 ?? 8D 06 D4 AD ?? ?? D0 23 A5 ?? 8D 07 D4 A5 ?? 8D 08 D4 A5 ?? 8D 09 D4 A5 ?? 8D 0A D4 A5 ?? 8D 0B D4 END
-A2 79 BD ?? ?? 9D ?? ?? E8 10 F7 30 12 A2 15 A0 0E 20 ?? ?? A2 79 BD ?? ?? 9D ?? ?? E8 10 F7 A2 7C BD ?? ?? 9D 99 D3 E8 10 F7 60 8A A8 BD ?? ?? F0 08 A9 00 99 04 D4 9D ?? ?? 60 EE ?? ?? A2 00 END
+30 ?? B9 ?? ?? 48 29 F0 4A 4A 4A 4A END
+B9 ?? ?? 29 01 D0 ?? BD ?? ?? 38 E9 05 10 END
+A2 00 BD ?? ?? F0 08 A9 00 9D 04 D4 9D ?? ?? 8A 18 69 07 AA E0 ?? 90 EA END
+8D 03 D4 AC ?? ?? AD ?? ?? 19 ?? ?? 8D 04 D4 AD ?? ?? 18 6D ?? ?? A8 END
+
+Ben_Daglish/WEMUSIC
+9D 00 D4 9D ?? ?? C8 B1 ?? 85 ?? A5 ?? 9D ?? D4 A5 ?? 9D 04 D4 A5 ?? 18 69 03 85 END
+
+Ben_Daglish_2
+48 BD ?? ?? A8 A9 ?? 99 04 D4 A9 ?? 99 04 D4 68 99 05 D4 END
 
 Berkeley
 C5 12 F0 0B A9 00 85 ?? A9 00 85 ?? 20 END
@@ -266,8 +267,7 @@ Dave_Lee
 C8 A5 ?? 91 ?? A5 ?? 4A 4A 4A A2 FF E8 4A 90 END
 
 Dave_Lowe
-AD ?? ?? 8D 0D D4 AD ?? ?? 8D 0C D4 AD ?? ?? 8D 0B D4 AD ?? ?? 8D 0A D4 AD ?? ?? 8D 09 D4 AD ?? ?? 8D 08 D4 END
-B1 F8 F0 59 C9 01 F0 33 A0 00 B1 F6 A0 0D 38 F1 END
+00 D4 60 A0 00 B1 ?? C8 11 ?? F0 END
 
 Dave_Warhol
 85 ?? 0A 0A 0A AA A0 00 BD ?? ?? F0 30 99 ?? 00 END
@@ -276,8 +276,7 @@ AD ?? ?? D0 1D AD ?? ?? 8D 18 D4 F0 15 20 ?? ?? A2 00 20 ?? ?? A2 02 20 ?? ?? A2
 C9 12 B0 5A 48 48 A8 8A 18 79 END
 
 David_Dunn
-20 ?? ?? 8D 05 D4 20 ?? ?? 8D 0C D4 20 ?? ?? 8D 13 D4 20 ?? ?? 8D 06 D4 20 ?? ?? 8D 0D D4 20 ?? ?? 8D 14 D4 END
-20 ?? ?? 8D 05 D4 20 ?? ?? 8D 0C D4 20 ?? ?? 8D 06 D4 20 ?? ?? 8D 0D D4 4C ?? ?? 20 ?? ?? 8D 02 D4 20 ?? ?? 8D 03 D4 20 ?? ?? 8D 09 D4 20 ?? ?? 8D 0A D4 4C ?? ?? A5 ?? 85 ?? A5 ?? 85 END
+AD ?? ?? 8C 04 D4 8D 04 D4 END
 
 David_Green
 30 ?? BD ?? ?? 99 02 D4 48 BD ?? ?? 99 03 D4 48 BD ?? ?? 99 05 D4 BD ?? ?? 99 06 D4 AE ?? ?? A9 FF 9D ?? ?? 9D ?? ?? 68 9D ?? ?? 9D ?? ?? 68 9D ?? ?? 9D ?? ?? A9 00 9D END
@@ -287,11 +286,11 @@ C9 ?? 90 01 60 8E ?? ?? 8C ?? ?? A0 00 8C ?? ?? 0A AA BD ?? ?? 85 ?? BD ?? ?? 85
 A9 00 91 ?? C8 C0 20 D0 F9 A0 03 A9 02 91 ?? A0 0C A9 01 91 ?? AND 85 ?? AND 85 ?? 60 27 48 29 0F 85 ?? A9 ?? 38 E5 ?? AA 68 29 F0 4A 4A 4A END
 
 David_Whittaker
-8E 12 D4 E8 8E 12 D4 AD ?? ?? 8D 18 D4 END
-8E 12 D4 E8 8E 12 D4 EE ?? ?? AD ?? ?? 18 END
-8E 12 D4 E8 8E 12 D4 E6 ?? A5 ?? 18 END
-8E 12 D4 E8 8E 12 D4 A9 ?? 8D 18 D4 60 END
+CE ?? ?? 8E 04 D4 E8 8E 04 D4 END
+AD ?? ?? 8D 06 D4 AE ?? ?? 8E 04 D4 E8 8E 04 D4 END
 AD ?? ?? 85 ?? AD ?? ?? 85 ?? A0 00 B1 ?? 8D ?? ?? C8 B1 ?? 8D ?? ?? 60 END
+B1 ?? F0 AND C8 B1 AND A9 ?? 8D 04 D4 A9 ?? 8D 04 D4 AND 69 02 85 END
+8D 08 D4 B9 ?? ?? 8D 0E D4 B9 ?? ?? 8D 0F D4 A9 ?? 8D 04 D4 END
 
 Deadbeat_Digi
 B1 FB 29 0F 85 69 B1 FD 29 0F 18 65 69 4A 8D 18 D4 END
@@ -427,11 +426,9 @@ B9 00 ?? 8D 01 D4 B9 00 ?? 8D 00 D4 B9 00 ?? 8D 08 D4 B9 00 ?? 8D 07 D4 B9 00 ??
 Fred_Gray
 BD ?? ?? 18 7D ?? ?? 9D ?? ?? 0A 0A 0A 0D ?? ?? 9D 02 D4 BD ?? ?? 4A 4A 4A 4A 4A 1D ?? ?? 9D 03 D4 END
 8D ?? ?? A2 00 AD ?? ?? 2D ?? ?? D0 02 A2 02 BD ?? ?? 8D 07 D4 BD ?? ?? 8D 08 D4 60 END
-60 0A 0A AND A8 A9 00 9D ?? ?? 9D ?? ?? 8C ?? ?? B9 ?? ?? A8 20 ?? ?? 8A 38 E9 07 AA AC ?? ?? C8 B9 ?? ?? 9D ?? ?? C8 B9 ?? ?? AND 20 ?? ?? C8 B9 ?? ?? 9D 05 D4 END
-8D ?? ?? C8 B9 ?? ?? 8D ?? ?? AC ?? ?? F0 09 4E ?? ?? 6E ?? ?? 88 D0 F7 AD ?? ?? 9D 00 D4 AD ?? ?? 9D 01 D4 60 BD ?? ?? 18 7D ?? ?? 9D ?? ?? 0A 0A 0A 09 07 9D 02 D4 BD ?? ?? 4A 4A 4A 4A 4A 9D 03 D4 60 END
-4C ?? ?? 4C ?? ?? 4C ?? ?? 4C ?? ?? 4C ?? ?? 4C ?? ?? 4C ?? ?? A9 ?? 8D 0C D4 8D 13 D4 A9 ?? 20 ?? ?? D0 1B AC ?? ?? B9 ?? ?? 20 ?? ?? B9 END
-9D FF D3 CA D0 FA A9 ?? 8D 05 D4 A9 ?? 8D 18 D4 A9 ?? 8D 0C D4 A9 ?? 8D 09 D4 A9 ?? 8D ?? D4 60 END
-8D 04 D4 EE 04 D4 BC ?? ?? F0 ?? B9 ?? ?? 8D 07 D4 B9 ?? ?? 8D 08 D4 AND 8D 0B D4 EE 0B D4 END
+9D 04 D4 FE 04 D4 AD END
+EE 04 D4 A9 ?? 8D ?? ?? 8D 06 D4 8D 00 D4 END
+8D 04 D4 EE 04 D4 BC END
 
 GalBard/ATOO
 10 03 4C ?? ?? 29 0F A8 B9 ?? ?? 8D ?? ?? B9 ?? ?? 8D ?? ?? A0 00 B1 FB 4A 4A 4A 4A A8 F0 09 4E END
@@ -725,8 +722,7 @@ Jeroen_Kimmel
 A8 ?? ?? ?? 85 ?? ?? ?? ?? 85 ?? A9 00 9D ?? D4 9D ?? D4 9D END
 
 Jeroen_Koops
-8D 18 D4 A9 00 8D 17 D4 4C ?? ?? 0A 0A 0A A2 ?? 86 ?? 18 69 ?? 85 ?? 90 02 E6 ?? A0 00 B1 END
-F0 1F CE ?? ?? D0 1A A9 ?? 8D ?? ?? CE ?? ?? 08 AD ?? ?? 0D ?? ?? 8D 18 D4 28 D0 05 A9 00 8D ?? ?? A9 ?? 8D ?? ?? AE ?? ?? BD ?? ?? 8D ?? ?? BD ?? ?? 8D ?? ?? DE ?? ?? D0 ?? 20 END
+AC ?? ?? BE ?? ?? A9 ?? 99 ?? ?? AC ?? ?? BD ?? ?? 29 FE 99 04 D4 END
 
 JFK_Digi
 A0 00 B1 A4 29 F0 4A 4A 4A 4A 8D ?? ?? B1 A8 29 F0 4A 4A 4A 4A 8D ?? ?? E6 01 AD ?? ?? 18 6D END
@@ -745,14 +741,7 @@ John_Hancock
 C9 95 F0 4B C9 94 F0 76 C9 FE D0 03 4C END
 
 John_Player
-4C ?? ?? A4 ?? F0 ?? A2 FF 8E END
-4C ?? ?? 4C ?? ?? 86 ?? 60 86 ?? CA 86 ?? 60 A9 C9 30 02 A9 65 E0 03 F0 5C CA F0 52 8D F0 ?? 8D ?? ?? 60 END
-
-Jonathan_Dunn
-AD ?? ?? F0 01 60 A9 ?? AND AD ?? ?? F0 03 20 ?? ?? AD ?? ?? F0 ?? CE ?? ?? AD ?? ?? D0 ?? AD ?? ?? 8D ?? ?? CE ?? ?? AD ?? ?? 8D 18 D4 29 0F D0 ?? AND 4C ?? ?? 20 END
-BD ?? ?? F0 03 20 ?? ?? BD ?? ?? F0 03 20 ?? ?? CE ?? ?? CE ?? ?? CA 8E ?? ?? 10 END
-F0 1B BC ?? ?? B9 ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? AC ?? ?? 99 01 D4 BD ?? ?? 99 00 D4 BD ?? ?? AC ?? ?? 99 04 D4 BD ?? ?? F0 05 DE ?? ?? F0 01 60 BD ?? ?? AC ?? ?? 99 04 D4 60 END
-4C ?? ?? C9 F0 90 08 29 0F 8D ?? ?? 4C ?? ?? C9 E0 90 0B 29 0F 8D 18 D4 8D ?? ?? 4C ?? ?? C9 C0 90 0B 29 1F 0A 0A 0A 9D ?? ?? 4C ?? ?? C9 80 90 08 29 3F 9D ?? ?? 4C ?? ?? C9 7F D0 0B A9 DE 9D END
+A9 00 A2 0C 95 ?? 9D 00 D4 9D 0B D4 CA 10 F5 END
 
 KB/TOM
 3D ?? ?? 9D 04 D4 B9 ?? ?? 7D ?? ?? A8 B9 ?? ?? 18 7D ?? ?? 9D 00 D4 B9 ?? ?? 7D ?? ?? 9D 01 D4 4C ?? ?? 29 F7 3D ?? ?? 9D 04 D4 B9 ?? ?? 9D 01 D4 A9 00 9D 00 D4 BC ?? ?? DE END
@@ -825,12 +814,11 @@ Mark_Clements
 99 04 D4 CA 30 03 4C ?? ?? 60 C9 FF D0 08 9D END
 
 Mark_Cooksey
-BD ?? ?? D0 03 20 ?? ?? 60 BD ?? ?? 99 01 D4 BD ?? ?? 99 00 D4 BD ?? ?? 99 03 D4 BD ?? ?? 99 02 D4 BD ?? ?? 99 05 D4 BD ?? ?? 99 06 D4 60 CE END
+8E ?? ?? B1 ?? F0 ?? E8 END
 C8 B1 FB 9D ?? ?? C8 98 18 65 FB 9D ?? ?? A5 FC 69 00 9D END
 
 Mark_Cooksey/Neil_Bate
-4C ?? ?? B1 ?? C8 C9 00 F0 1D A2 0A 8E 05 D4 A2 00 8E 06 D4 A2 00 8E 04 D4 A2 41 8E 04 D4 8D 01 D4 B1 ?? 8D 00 D4 END
-C8 C9 00 F0 1D A2 0A 8E END
+8E 06 D4 A2 ?? 8E 04 D4 A2 ?? 8E 04 D4 8D 01 D4 B1 ?? 8D 00 D4 END
 
 Mark_Tait
 E8 C8 C0 06 D0 F4 AD ?? ?? 85 ?? AD ?? ?? 85 ?? AD ?? ?? 0A 0A 18 6D ?? ?? 0A AA 20 ?? ?? A2 00 AD ?? ?? 0A 8D ?? ?? 0A 0A 0A 18 6D ?? ?? A8 B9 END
@@ -1050,6 +1038,12 @@ Patrick_Payne
 Paul_Butler
 A8 BD ?? ?? 99 00 D4 E8 C8 C6 ?? 10 END
 
+Paul_Hughes
+AD ?? ?? F0 01 60 A9 ?? AND AD ?? ?? F0 03 20 ?? ?? AD ?? ?? F0 ?? CE ?? ?? AD ?? ?? D0 ?? AD ?? ?? 8D ?? ?? CE ?? ?? AD ?? ?? 8D 18 D4 29 0F D0 ?? AND 4C ?? ?? 20 END
+BD ?? ?? F0 03 20 ?? ?? BD ?? ?? F0 03 20 ?? ?? CE ?? ?? CE ?? ?? CA 8E ?? ?? 10 END
+F0 1B BC ?? ?? B9 ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? AC ?? ?? 99 01 D4 BD ?? ?? 99 00 D4 BD ?? ?? AC ?? ?? 99 04 D4 BD ?? ?? F0 05 DE ?? ?? F0 01 60 BD ?? ?? AC ?? ?? 99 04 D4 60 END
+4C ?? ?? C9 F0 90 08 29 0F 8D ?? ?? 4C ?? ?? C9 E0 90 0B 29 0F 8D 18 D4 8D ?? ?? 4C ?? ?? C9 C0 90 0B 29 1F 0A 0A 0A 9D ?? ?? 4C ?? ?? C9 80 90 08 29 3F 9D ?? ?? 4C ?? ?? C9 7F D0 0B A9 DE 9D END
+
 Paul_Norman/Cosmi
 C8 D0 02 E6 ?? B1 ?? AND 8D 00 D4 AND C8 D0 02 E6 ?? B1 AND 8D 08 D4 END
 
@@ -1114,13 +1108,13 @@ RiffQuick
 AD ?? ?? F0 03 20 ?? ?? 20 ?? ?? AD ?? ?? 8D 16 D4 AD ?? ?? 8D 15 D4 A9 07 85 FD E6 FE AD END
 
 Rob_Hubbard
-CE ?? ?? 10 08 A9 ?? 8D ?? ?? 4C ?? ?? CE ?? ?? 10 06 AD ?? ?? 8D END
+99 02 D4 48 BD ?? ?? 99 03 D4 48 BD ?? ?? 48 BD ?? ?? 99 05 D4 BD ?? ?? 99 06 D4 END
+2C ?? ?? 30 ?? 70 ?? B9 ?? ?? 8D 00 D4 B9 ?? ?? 8D 01 D4 98 38 END
+AE ?? ?? AD ?? ?? 9D ?? ?? FE ?? ?? BC ?? ?? B1 ?? C9 FF D0 ?? A9 ?? 9D ?? ?? FE END
+99 04 D4 BD ?? ?? 99 02 D4 48 BD ?? ?? 99 03 D4 48 BD ?? ?? 99 05 D4 END
 2C ?? ?? 70 ?? FE ?? ?? AD ?? ?? 10 ?? C8 B1 ?? 10 ?? 9D ?? ?? 4C END
-A9 ?? 8D 18 D4 24 ?? 30 ?? 50 ?? A2 02 A9 00 BC ?? ?? 99 04 D4 95 ?? 95 ?? 95 ?? 95 ?? 99 06 D4 A9 ?? 95 C9 ?? 10 ?? 85 ?? 4C ?? ?? 50 11 A9 00 A2 02 BC ?? ?? 99 04 D4 CA 10 F7 A9 80 85 ?? 4C END
-29 1F C9 01 90 22 B4 ?? ?? 30 10 18 A5 ?? 65 ?? 85 ?? A5 ?? 65 ?? 85 ?? 4C ?? ?? AC ?? ?? A5 ?? 99 00 D4 A5 ?? 99 01 D4 END
-FE ?? ?? BC ?? ?? B1 ?? C9 FF D0 ?? A9 00 9D ?? ?? FE ?? ?? 4C ?? ?? AC ?? ?? BD ?? ?? 29 ?? D0 END
-4C ?? ?? BD ?? ?? 0A A8 B9 ?? ?? 8D ?? ?? B9 ?? ?? AC ?? ?? 99 01 D4 AD ?? ?? 99 00 D4 END
-AC ?? ?? BD ?? ?? 29 20 D0 ?? BD ?? ?? D0 ?? BD ?? ?? 29 FE 99 04 D4 A9 00 99 05 D4 99 06 D4 END
+0A 0A 0A AA BD ?? ?? 8D ?? ?? BD ?? ?? 2D ?? ?? 99 04 D4 END
+99 04 D4 A9 ?? 9D ?? ?? 4C ?? ?? BD ?? ?? 4A DD END
 B9 ?? ?? 9D 01 D4 B9 ?? ?? 9D 00 D4 20 ?? ?? BC ?? ?? C8 98 9D 04 D4 END
 (Rob_Hubbard_Digi)
 4A 4A 4A 4A 4C ?? ?? 29 0F EE ?? ?? D0 03 EE ?? ?? 8D 18 D4 AD 0D DD END
@@ -1564,6 +1558,9 @@ E6 FB D0 02 E6 FC ?? A0 00 B1 FB C9 FF F0 28 END
 
 ?Lieblich&Grigg
 99 06 D4 60 E0 03 10 ?? BD ?? ?? A8 BD ?? ?? 99 04 D4 END
+
+?Macsen
+A9 ?? 8D 04 D4 EE 04 D4 A0 END
 
 Digi-Organizer
 4C E6 91 AD 82 90 0A A8 B9 01 92 29 7F 20 C7 91 END
