--- a/jsidplay2/sample_build.properties
+++ b/jsidplay2/sample_build.properties
@@ -32,6 +32,12 @@ targetDriver=org.hsqldb.jdbcDriver
 targetURL=jdbc:hsqldb:file:${gamebase_dir}/gb64.idx;shutdown=true,create=true
 
 #
+# Use SSH section or FTP section?
+#
+
+access_type=ftp
+
+#
 # SSH upload section
 #
 
@@ -42,3 +48,21 @@ remote_dir= htdocs
 keyfile = jsidplay2.ssh
 # Private key password
 passphrase = <passphrase>
+
+#
+# FTP upload section
+#
+
+# Sourceforge Server and directory
+remote_srv = ftp.kenchis.t15.org
+remote_dir = 
+# Private key filename
+username = <username>
+# Private key password
+passphrase = <passphrase>
+
+#
+# The server URL, where jsidplay has been uploaded to (for JNLP, Applet resources)
+#
+#server_url=http://jsidplay2.sourceforge.net/
+server_url=http://kenchis.t15.org/jsidplay2/
