--- a/trunk/jsidplay2/build.xml
+++ b/trunk/jsidplay2/build.xml
@@ -820,9 +820,10 @@
 			<arg value="targetURL=${targetURL}" />
 		</java>
 		<delete file="${gamebase_dir}/gb64.jar" />
-		<jar destfile="${gamebase_dir}/gb64.jar">
+		<jar destfile="${gamebase_dir}/gb64.jar" compress="true">
 			<fileset dir="${gamebase_dir}">
 				<include name="GBC_v09.*" />
+				<exclude name="GBC_v09.log" />
 			</fileset>
 		</jar>
 		<delete includeemptydirs="true">
